--- a/scroll-animation/index.html
+++ b/scroll-animation/index.html
@@ -10,35 +10,37 @@
 <body>
 	<h1>Scroll to see the animation</h1>
 
-	<div class="box">
-		<h2>Content</h2>
-	</div>
-	<div class="box">
-		<h2>Content</h2>
-	</div>
-	<div class="box">
-		<h2>Content</h2>
-	</div>
-	<div class="box">
-		<h2>Content</h2>
-	</div>
-	<div class="box">
-		<h2>Content</h2>
-	</div>
-	<div class="box">
-		<h2>Content</h2>
-	</div>
-	<div class="box">
-		<h2>Content</h2>
-	</div>
-	<div class="box">
-		<h2>Content</h2>
-	</div>
-	<div class="box">
-		<h2>Content</h2>
-	</div>
-	<div class="box">
-		<h2>Content</h2>
+	<div class="boxes-wrapper">
+		<div class="box">
+			<h2>Content</h2>
+		</div>
+		<div class="box">
+			<h2>Content</h2>
+		</div>
+		<div class="box">
+			<h2>Content</h2>
+		</div>
+		<div class="box">
+			<h2>Content</h2>
+		</div>
+		<div class="box">
+			<h2>Content</h2>
+		</div>
+		<div class="box">
+			<h2>Content</h2>
+		</div>
+		<div class="box">
+			<h2>Content</h2>
+		</div>
+		<div class="box">
+			<h2>Content</h2>
+		</div>
+		<div class="box">
+			<h2>Content</h2>
+		</div>
+		<div class="box">
+			<h2>Content</h2>
+		</div>
 	</div>
 
 	<script src="script.js"></script>
